tests/semantic/invalid/struct_fields/field_on_non_struct.src
fn main() -> int {
  int x;
  x.a = 1;
  return 0;
}

